css/modal.css
.modal-container {
  height: 100vh;
  width: 100%;
  background: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2000;
  display: none;
  justify-content: center;
  align-items: center;
}

.modal-container.active {
  display: flex;
}

.modal {
  background: white;
  width: 213px; /* This change for every media query */
  height: 120px; /* This change for every media query */
  padding: 0px;
  border: 10px solid #999999;
  box-shadow: 0 0 0 10px white;
  position: relative;
}

/*Css to remove animations on click before opening modal container*/
.remove-click-animation {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
}

@keyframes modal {
  from {
    opacity: 0;
    transform: translate3d(0, -30px, 0);
  }
  to {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

.ativo .modal {
  animation: modal 0.3s forwards;
}

.close-modal {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border: 4px solid white;
  top: -30px;
  right: -30px;
  position: absolute;
  background-color: #222222;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  cursor: pointer;
  text-align: center;
  padding: 0;
  margin: 0;
}
.modal iframe {
  width: 213px; /* This change for every media query */
  height: 120px; /* This change for every media query */
  display: block;
  margin: auto;
}

@media (max-width: 374px) {
  .modal {
    width: 213px;
    height: 120px;
  }
  .modal iframe {
    width: 213px;
    height: 120px;
  }
}
@media (min-width: 375px) and (min-height: 220px) {
  .modal {
    width: 320px;
    height: 180px;
  }
  .modal iframe {
    width: 320px;
    height: 180px;
  }
}
@media (min-width: 506px) and (min-height: 280px) {
  .modal {
    width: 426px;
    height: 240px;
  }
  .modal iframe {
    width: 426px;
    height: 240px;
  }
}
@media (min-width: 720px) and (min-height: 400px) {
  .modal {
    width: 640px;
    height: 360px;
  }
  .modal iframe {
    width: 640px;
    height: 360px;
  }
}
@media (min-width: 934px) and (min-height: 520px) {
  .modal {
    width: 854px;
    height: 480px;
  }
  .modal iframe {
    width: 854px;
    height: 480px;
  }
}
@media (min-width: 1360px) and (min-height: 760px) {
  .modal {
    width: 1280px;
    height: 720px;
  }
  .modal iframe {
    width: 1280px;
    height: 720px;
  }
}
@media (min-width: 2000px) and (min-height: 1120px) {
  .modal {
    width: 1920px;
    height: 1080px;
  }
  .modal iframe {
    width: 1920px;
    height: 1080px;
  }
}

